<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <Button
        android:id="@+id/audio_extraction"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/audio_extract"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/video_extraction"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/video_extract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/audio_extraction" />

    <Button
        android:id="@+id/av_format_conversation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/format_conversation"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_extraction" />

    <Button
        android:id="@+id/av_clip"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/av_clip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/video_extraction" />

    <Button
        android:id="@+id/av_merge"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/av_merge"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/av_format_conversation" />

    <Button
        android:id="@+id/av_to_img"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/av_to_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/av_clip" />

    <Button
        android:id="@+id/video_encode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:textSize="20sp"
        android:text="@string/video_encode"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/av_merge" />

    <Button
        android:id="@+id/video_decode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#000000"
        android:textSize="20sp"
        android:text="@string/video_decode"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/av_to_img" />

    <Button
        android:id="@+id/audio_encode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="2dp"
        android:background="#000000"
        android:textSize="20sp"
        android:text="@string/audio_encode"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/audio_decode" />

    <Button
        android:id="@+id/audio_decode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#000000"
        android:textSize="20sp"
        android:text="@string/audio_decode"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/video_decode" />

</androidx.constraintlayout.widget.ConstraintLayout>